--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "evaisse/php-json-schema-generator",
+    "name": "openregion/php-json-schema-generator",
     "type": "library",
     "description": "A JSON Schema Generator.",
     "keywords": ["PHP", "JSON", "Schema", "generator", "validation", "parser"],
-    "homepage": "https://github.com/evaisse/php-json-schema-generator",
+    "homepage": "https://github.com/openregion/php-json-schema-generator",
     "license": "MIT",
     "authors": [
         {
@@ -13,16 +13,22 @@
         {
             "name": "Emmanuel VAÏSSE",
             "email": "evaisse@gmail.com"
-        }
+        },
+				{
+						"name": "CIT Open Region",
+						"email": "info@openregion.info",
+						"homepage": "https://openregion.info/"
+				}
     ],
     "require": {
-        "php": ">=5.6.0",
-        "satooshi/php-coveralls": "^1.0"
+        "php": ">=7.4.0",
+        "php-coveralls/php-coveralls": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.*",
+        "phpunit/phpunit": "^9.5.0",
         "league/json-guard": "1.*",
-        "league/json-reference": "1.*"
+        "league/json-reference": "1.*",
+				"justinrainbow/json-schema": "^5.2"
     },
     "autoload": {
         "psr-4": {
